--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -7,27 +7,32 @@ order += "ipv6"
 order += "disk /"
 order += "run_watch DHCP"
 order += "run_watch VPN"
-order += "wireless wlan0"
-order += "ethernet eth0"
+order += "wireless _first_"
+order += "ethernet _first_"
 order += "battery 0"
+order += "battery 1"
 order += "cpu_temperature 0"
 order += "load"
 order += "volume master"
+order += "cpu_usage"
 order += "time"
 
-wireless wlan0 {
+wireless _first_ {
         format_up = "W: (%quality at %essid, %bitrate, %speed) %ip"
         format_down = "W: down"
 }
 
-ethernet eth0 {
+ethernet _first_ {
         # if you use %speed, i3status requires root privileges
         format_up = "E: (%speed) %ip" 
 	format_down = "E: down"
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+        format = "B0 %status %percentage %remaining"
+}
+battery 1 {
+        format = "B1 %status %percentage %remaining"
 }
 
 run_watch DHCP {
