--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -10,7 +10,6 @@ order += "run_watch VPN"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery 0"
-order += "battery 1"
 order += "cpu_temperature 0"
 order += "load"
 order += "volume master"
@@ -29,18 +28,7 @@ ethernet _first_ {
 }
 
 battery 0 {
-        format = "B0 %status %percentage %remaining"
-}
-battery 1 {
-        format = "B1 %status %percentage %remaining"
-}
-
-run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
-}
-
-run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+        format = "%status %percentage %remaining"
 }
 
 time {
