--- a/i3/config
+++ b/i3/config
@@ -166,8 +166,10 @@ mode "$mode_system" {
 bindsym Mod4+Delete mode "$mode_system"
 
 # General keybinds
-bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
-bindsym XF86MonBrightnessUp   exec --no-startup-id xbacklight -inc 10
+#bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -dec 10
+#bindsym XF86MonBrightnessUp   exec --no-startup-id xbacklight -inc 10
+bindsym XF86MonBrightnessDown exec --no-startup-id /home/peter/kodesjov/backlight/backlight --dec=100
+bindsym XF86MonBrightnessUp   exec --no-startup-id /home/peter/kodesjov/backlight/backlight --inc=100
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ false && pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ false && pactl set-sink-volume @DEFAULT_SINK@ -5%
@@ -178,13 +180,6 @@ bindsym Mod4+Escape exec --no-startup-id i3lock -i /home/peter/pics/hawaii.png
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	output eDP1
-	status_command i3status -c ~/.config/i3status/config
-	position bottom
-	tray_output eDP1
-}
-bar {
-	output DP2
 	status_command i3status -c ~/.config/i3status/config
 	position bottom
 }
