--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -8,7 +8,6 @@ order += "disk /"
 order += "wireless _first_"
 order += "ethernet _first_"
 order += "battery 0"
-order += "battery 1"
 order += "cpu_temperature 0"
 order += "load"
 order += "volume master"
@@ -27,10 +26,7 @@ ethernet _first_ {
 }
 
 battery 0 {
-        format = "B0 %status %percentage %remaining"
-}
-battery 1 {
-        format = "B1 %status %percentage %remaining"
+        format = "%status %percentage %remaining"
 }
 
 time {
