--- a/i3/config
+++ b/i3/config
@@ -177,6 +177,11 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute alsa_input.p
 bindsym Mod4+t exec thunar
 bindsym Mod4+Escape exec --no-startup-id i3lock -i /home/peter/pics/hawaii.png
 
+bindsym Mod4+Prior exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ false && pactl set-sink-volume @DEFAULT_SINK@ +5%
+bindsym Mod4+Next  exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ false && pactl set-sink-volume @DEFAULT_SINK@ -5%
+bindsym Mod4+Home exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym Mod4+End exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
