--- a/customkeyboard/10-keyboard.conf
+++ b/customkeyboard/10-keyboard.conf
@@ -7,5 +7,5 @@ Section "InputClass"
         Option "XkbLayout" "gb"
         Option "XkbModel" "pc105"
         Option "XkbVariant" "dkcustom"
-        Option "XkbOptions" "grp:alt_shift_toggle,caps:super"
+        Option "XkbOptions" "caps:super,ctrl:swap_lalt_lctl"
 EndSection
