--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -3,15 +3,15 @@ general {
         interval = 1
 }
 
-order += "ipv6"
-order += "disk /"
 order += "wireless _first_"
 order += "ethernet _first_"
+order += "disk /"
 order += "battery 0"
 order += "cpu_temperature 0"
-order += "load"
-order += "volume master"
 order += "cpu_usage"
+order += "load"
+order += "memory"
+order += "volume master"
 order += "time"
 
 wireless _first_ {
@@ -42,7 +42,7 @@ cpu_temperature 0 {
 }
 
 disk "/" {
-	format = "%free"
+	format = "sys:%free"
 }
 
 volume master {
@@ -50,4 +50,9 @@ volume master {
 	device = "default"
 	mixer = "Master"
 	mixer_idx = 0
+}
+
+memory {
+	format = "Mem: %used/%total"
+	threshold_degraded = "10%"
 }
