--- a/i3/config
+++ b/i3/config
@@ -196,14 +196,18 @@ bindsym Mod4+End exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	status_command i3status -c ~/.config/i3status/config
+	#status_command i3status -c ~/.config/i3status/config
+	font pango:Terminus, FontAwesome 10
+	status_command i3status-rs /home/peter/.cfg/i3/i3status-rs.toml
 	position bottom
 }
 
 # Startup programs
-exec nm-applet
+#exec nm-applet
 exec kupfer
-exec /usr/lib/xfce4/notifyd/xfce4-notifyd
+#exec /usr/lib/xfce4/notifyd/xfce4-notifyd
 #exec xautolock -time 5 -locker i3lock
-exec autorandr --change
+#exec autorandr --change
 exec --no-startup-id xidlehook --not-when-fullscreen --not-when-audio --timer normal 600 'i3lock' ''
+# Start everything with autostart entries
+exec dex --autostart
